Adding files for task 3 and updating home and css

--- a/resources/common.css
+++ b/resources/common.css
@@ -61,7 +61,7 @@ pre {
 .flex-wrapper {
 	display: flex;
 	flex-flow: row wrap;
-	justify-content: left;
+	justify-content: center;
 }
 
 .flexbox {
